Fix: sign-up jwtToken, interest